# CS2Vault

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  calculatorwidget.cpp  calculatorwidget.h  clean_artifacts.sh  cmake_uninstall.cmake.in  contributing.md  cs2_trader  main.cpp  mainwindow.cpp  mainwindow.h  portfoliowidget.cpp  portfoliowidget.h  priceempireapi.cpp  priceempireapi.h  settingswidget.cpp  settingswidget.h  steamapi.h  steamcompanion.cpp  steamcompanion.h
.claude/: settings.local.json
.github/workflows/: build.yml
src/: accountmanager.cpp  accountmanager.h  dashboardwidget.cpp  dashboardwidget.h  itemdatabase.cpp  itemdatabase.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  portfoliomanager.cpp  portfoliomanager.h  portfoliowidget.cpp  portfoliowidget.h  priceempireapi.cpp  priceempireapi.h  qrlogindialog.cpp  qrlogindialog.h  resources.qrc  settingswidget.cpp  settingswidget.h  steamapi.cpp  steamcompanion.cpp  steamcompanion.h  storageunitwidget.cpp  storageunitwidget.h  style.qss  tradehistory.cpp  tradehistory.h  tradehistorywidget.cpp  tradehistorywidget.h  tradeswidget.cpp  tradeswidget.h  updatechecker.cpp  updatechecker.h  watchlistmanager.cpp  watchlistmanager.h  watchlistwidget.cpp  watchlistwidget.h
steamcompanion/: index.js  package-lock.json  package.json
